core/src/test/resources/de/uni_luebeck/isp/tessla/core/errors/parameterless-without-parens.tessla
in x: Events[Int]

def foo = 42
out foo()